--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="hola">Historial On line
+      <a class="navbar-brand js-scroll-trigger" href="http://127.0.0.1:5000/">Historial On line
       </a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -41,11 +41,11 @@
         <ul class="navbar-nav ml-auto">
           
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="datos/{{cedula}}">Datos personales</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/datos/{{cedula}}">Datos personales</a>
           </li>
           
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="historial">historial clinico</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial">historial clinico</a>
           </li>
          
           <li class="nav-item mx-0 mx-lg-1">
@@ -57,7 +57,7 @@
           </li>
 
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vacuna">vacunacion</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/vacuna">vacunacion</a>
           </li>
 
         </ul>
@@ -74,11 +74,14 @@
       <h2 class="font-weight-light mb-0">la salud mas practica,rapida y segura</h2>
     </div>
   </header>
-
+  <form method="POST">
+    Cedula: <input type="text" name="cedula"><br>
+      <input type="submit" value="buscar"><br>
+  </form>
   <!-- datos personales Grid Section -->
   <section class="datos personales" id="datos_personales">
       <div class="container">
-          <a title="Datos personales" href="datos/{{cedula}}"><img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen7.jpg') }}" alt=""></a>
+          <a title="Datos personales" href="http://127.0.0.1:5000/datos/{{cedula}}"><img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen7.jpg') }}" alt=""></a>
         <h2 class="text-center text-uppercase text-secondary mb-0">datos personales</h2>
         <hr class="star-dark mb-5">
         
@@ -89,7 +92,7 @@
   <!-- historial clinico Section -->
   <section class="bg-primary text-blue mb-0" id="historial_clinico">
     <div class="container">
-        <a title="Historial Clinico" href="historial"><img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen4.jpg') }}" alt=""></a>
+        <a title="Historial Clinico" href="http://127.0.0.1:5000/historial"><img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen4.jpg') }}" alt=""></a>
       <h2 class="text-center text-uppercase text-white">historial clinico</h2>
       <hr class="star-light mb-5">
       <div class="row">
@@ -242,7 +245,7 @@
   <!-- vacunacion Grid Section -->
   <section class="bg-primary text-white mb-0" id="vacunacion">
       <div class="container">
-          <a title="Vacunacion" href="vacuna"><img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen11.jpg') }}" alt=""></a>
+          <a title="Vacunacion" href="http://127.0.0.1:5000/vacuna"><img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen11.jpg') }}" alt=""></a>
         <h2 class="text-center text-uppercase text-white">Vacunacion</h2>
         <hr class="star-light mb-5">
         <div class="row">
