--- a/templates/datos.html
+++ b/templates/datos.html
@@ -37,11 +37,11 @@
             <ul class="navbar-nav ml-auto">
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="datos/{{cedula}}">Datos personales</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/datos/{{cedula}}">Datos personales</a>
               </li>
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="historial">historial clinico</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial">historial clinico</a>
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
@@ -53,7 +53,7 @@
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vacuna">vacunacion</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/vacuna/{{cedula}}">vacunacion</a>
               </li>
     
             </ul>
