--- a/templates/index.html
+++ b/templates/index.html
@@ -74,9 +74,14 @@
       <h2 class="font-weight-light mb-0">la salud mas practica,rapida y segura</h2>
     </div>
   </header>
+  <br>
   <form method="POST">
-    Cedula: <input type="text" name="cedula"><br>
-      <input type="submit" value="buscar"><br>
+      <h3 class="text-uppercase mb-12"
+      style="text-align: center">Cedula: 
+        <input type="text" name="cedula">
+      </br>
+        <input type="submit" style="margin-top: 30px" value="buscar">  
+      <br></h3>
   </form>
   <!-- datos personales Grid Section -->
   <section class="datos personales" id="datos_personales">
