--- a/templates/vacuna.html
+++ b/templates/vacuna.html
@@ -27,7 +27,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="hola">historial on line
+          <a class="navbar-brand js-scroll-trigger" href="http://127.0.0.1:5000/">historial on line
           </a>
           <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
@@ -37,11 +37,11 @@
             <ul class="navbar-nav ml-auto">
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="datos">Datos personales</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/datos/{{cedula}}">Datos personales</a>
               </li>
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="historial">historial clinico</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial">historial clinico</a>
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
@@ -53,7 +53,7 @@
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vacuna">vacunacion</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/vacuna/{{cedula}}">vacunacion</a>
               </li>
     
             </ul>
