--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,7 @@
         <input type="submit" style="margin-top: 30px" value="buscar">  
       <br></h3>
   </form>
+  <div><a href="/formulario">Si no te registraste, registrarse </a>  </div>
   <!-- datos personales Grid Section -->
   <section class="datos personales" id="datos_personales">
       <div class="container">
