--- a/templates/registro.html
+++ b/templates/registro.html
@@ -43,35 +43,35 @@
     <br>
 <form method="POST">
         <h3 class="text-uppercase mb-12"
-        style="text-align: left"> 
+        style="text-align: center"> 
           <input type="text" name="nombre"placeholder=Nombre:>
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: left">
+        style="text-align: center">
           <input type="text" name="apellido"placeholder=Apellido: >
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: left">
+        style="text-align: center">
           <input type="text" name="fecha_de_nacimiento"placeholder="Fecha de nacimiento:" >
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: left"> 
+        style="text-align: center"> 
           <input type="text" name="ciudad"placeholder=Ciudad:>
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: left">
+        style="text-align: center">
           <input type="text" name="grupo_sanguineo"placeholder="Grupo Sanguineo:" >
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: cenleftter">
+        style="text-align: center">
           <input type="text" name="telefono"placeholder=Telefono/Celular: >
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: left">
+        style="text-align: center">
           <input type="text" name="cedula"placeholder=Cedula: >
           <br></h3>
           <h3 class="text-uppercase mb-12"
-        style="text-align: left">
+        style="text-align: center">
           <input type="submit" style="margin-top: 30px" value="Registrar">  
         
           <br></h3>
