--- a/templates/datos.html
+++ b/templates/datos.html
@@ -27,7 +27,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="hola">historial on line
+          <a class="navbar-brand js-scroll-trigger" href="http://127.0.0.1:5000/">historial on line
           </a>
           <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
