--- a/templates/registro.html
+++ b/templates/registro.html
@@ -41,7 +41,7 @@
     <br>
     <br>
     <br>
-<form method="POST">
+<form action="{{url_for('formulario')}}" method="POST">
         <h3 class="text-uppercase mb-12"
         style="text-align: center"> 
           <input type="text" name="nombre"placeholder=Nombre:>
