--- a/templates/index.html
+++ b/templates/index.html
@@ -63,14 +63,16 @@
   <form method="POST">
       
   </form>
-  <div><a href="/formulario">Si no te registraste, registrarse </a>  </div>
+  
   <!-- datos personales Grid Section -->
   <section class="datos personales" id="datos_personales">
       <div class="container">
          <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/imagen7.jpg') }}" alt=""></a>
         <h2 class="text-center text-uppercase text-secondary mb-0">datos personales</h2>
         <hr class="star-dark mb-5">
-        
+        <h4 style="color: #20c997">¿Qué es salud Web?</h4>
+        <h4 style="color: #20c997">Salud Web es una plataforma virtual donde podrán consultar un conjunto de sus informes clínicos electrónicos que están disponibles en el Sistema y tener la garantía de que, cuando se desplace fuera de su comunidad tenga sus registros médicos disponibles y si requiera asistencia médica, esta información estén disponibles para los profesionales que lo atiendan en cualquier centro médico.
+            </h4>
         </div>
       </div>
     </section>
@@ -109,7 +111,7 @@
 <section class="estudios clinicos" id="estudios">
     <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="{{ url_for('static', filename='img/x.jpg') }}" alt="">
-      <h2 class="text-center text-uppercase text-secondary mb-0">studios clinicos</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">Estudios clinicos</h2>
       <hr class="star-dark mb-5">
       <div class="row">
 
@@ -132,7 +134,7 @@
             <p class="lead"></p>
           </div>
         </div>
-        
+        <h4 style="color: white">Es una fuente abierta de información y consulta sobre el estado de vacunaciones, dirigida particularmente a los profesionales médicos o enfermeras encargados de la vacunación en general.</h4>
       </div>
     </section>
 
