--- a/templates/vacuna.html
+++ b/templates/vacuna.html
@@ -41,7 +41,7 @@
               </li>
               
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial">historial clinico</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/historial/{{cedula}}">historial clinico</a>
               </li>
              
               <li class="nav-item mx-0 mx-lg-1">
@@ -49,7 +49,7 @@
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/estudio">estudios clinicos</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="http://127.0.0.1:5000/estudio/{{cedula}}">estudios clinicos</a>
               </li>
     
               <li class="nav-item mx-0 mx-lg-1">
