--- a/templates/estudio.html
+++ b/templates/estudio.html
@@ -76,40 +76,42 @@
                         <thead>
                           <tr>
                             <th>
-                              Fecha Inicio
+                              fecha inicio
                             </th>
                             <th>
-                              Diagnostico Medico
+                              diagnostico medico
                             </th>
                             <th>
-                              Estudios Realizados
+                              estudios realizados
                             </th>
                             <th>
-                              Receta
+                              receta
                             </th>
                             <th>
-                              Proximo Consulta
+                              fecha culminacion
                             </th>
                           </tr>
                         </thead>
                         <tbody>
+                            {% for estudio in paciente.estudios_medicos%}
                           <tr class="table-info">
                             <td>
-                              
+                              {{estudio.fecha_de_inicio}}
                             </td>
                             <td>
-                              
+                              {{estudio.diagnostico_medico}}
                             </td>
                             <td>
-                              
+                              {{estudio.estudio_realizados}}
                             </td>
                             <td>
-                              
+                              {{estudio.receta}}
                             </td>
                             <td>
-                              
+                              {{estudio.proxima_consulta}}
                             </td>
                           </tr>
+                          {% endfor %}
                           <tr class="table-warning">
                             <td>
                               
